src/objects/fcf__Exception_Log__c.object
<CustomObject>
    <description>The Exception Log object stores exception data caught in real-time by the ExceptionLogUtil class.</description>
    <fields>
        <fullName>fcf__Caused_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the exception log that caused this exception.</description>
        <inlineHelpText>A reference to the exception log that caused this exception.</inlineHelpText>
        <label>Caused By</label>
        <referenceTo>fcf__Exception_Log__c</referenceTo>
        <relationshipLabel>Caused Exceptions</relationshipLabel>
        <relationshipName>Caused_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcf__External_ID__c</fullName>
        <description>Used internally for constructing the exception log chain.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used internally for constructing the exception log chain.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcf__Line_Number__c</fullName>
        <description>The line number from where the exception was thrown.</description>
        <inlineHelpText>The line number from where the exception was thrown.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcf__Message__c</fullName>
        <description>The error message that displays for the user.</description>
        <inlineHelpText>The error message that displays for the user.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcf__Number_of_Failed_Rows__c</fullName>
        <description>The number of failed rows for DML exceptions.</description>
        <inlineHelpText>The number of failed rows for DML exceptions.</inlineHelpText>
        <label>Number of Failed Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcf__Related_To_ID__c</fullName>
        <description>This ID can be used to relate this exception log to a specific object or job ID.</description>
        <externalId>true</externalId>
        <label>Related To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcf__Stack_Trace__c</fullName>
        <description>The stack trace for this exception.</description>
        <inlineHelpText>The stack trace for this exception.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcf__Type__c</fullName>
        <description>The type of exception, such as DmlException, ListException, MathException, and so on.</description>
        <inlineHelpText>The type of exception, such as DmlException, ListException, MathException, and so on.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>fcf__All</fullName>
        <columns>NAME</columns>
        <columns>fcf__Type__c</columns>
        <columns>fcf__Message__c</columns>
        <columns>fcf__Stack_Trace__c</columns>
        <columns>fcf__Line_Number__c</columns>
        <columns>fcf__Caused_By__c</columns>
        <columns>fcf__Number_of_Failed_Rows__c</columns>
        <columns>fcf__Related_To_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>